--- a/network/network/templates/network/index.html
+++ b/network/network/templates/network/index.html
@@ -47,11 +47,12 @@
         <ul class="pagination d-flex justify-content-center">
             {% if postsOfPage.has_previous %}
             <li class="page-item">
-                <a class="page-link" href="?=page{{ postsOfPage.previous_page_number }}">Previous</a>
+                <a class="page-link" href="?page={{ postsOfPage.previous_page_number }}">Previous</a>
             </li>
-            {% endif %} {% if postsOfPage.has_next %}
+            {% endif %}
+            {% if postsOfPage.has_next %}
             <li class="page-item">
-                <a class="page-link" href="?=page{{ postsOfPage.next_page_number }}">Next</a>
+                <a class="page-link" href="?page={{ postsOfPage.next_page_number }}">Next</a>
             </li>
             {% endif %}
         </ul>
