--- a/network/network/templates/network/profile.html
+++ b/network/network/templates/network/profile.html
@@ -66,12 +66,12 @@
 <nav aria-label="Page navigation example">
     <ul class="pagination d-flex justify-content-center">
         {% if postsOfPage.has_previous %}
-        <li class="page-item"><a class="page-link" href="?=page{{ postsOfPage.previous_page_number }}">Previous</a>
+        <li class="page-item"><a class="page-link" href="?page={{ postsOfPage.previous_page_number }}">Previous</a>
         </li>
         {% endif %}
 
         {% if postsOfPage.has_next %}
-        <li class="page-item"><a class="page-link" href="?=page{{ postsOfPage.next_page_number }}">Next</a></li>
+        <li class="page-item"><a class="page-link" href="?page={{ postsOfPage.next_page_number }}">Next</a></li>
         {% endif %}
     </ul>
 </nav>
