--- a/girban/base/templates/base/layout.html
+++ b/girban/base/templates/base/layout.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'base/style.css' %}">
     <style>
         #about {
-            background: #f2f1ed url("{% static 'base/images/texture-light.png' %}");
+            background: #f2f1ed url("{% static 'base/images/texture-light.png' %}") repeat;
             background-size: cover;
         }
 
