--- a/girban/base/templates/base/layout.html
+++ b/girban/base/templates/base/layout.html
@@ -16,6 +16,11 @@
             background-size: cover;
         }
 
+        #contact {
+            background: #f2f1ed url("{% static 'base/images/texture-light.png' %}") repeat;
+            background-size: cover;
+        }
+
         #navbar-white {
             background: #f2f1ed url("{% static 'base/images/texture-light.png' %}");
             /* background-size: cover; */
