--- a/girban/base/templates/base/navbar.html
+++ b/girban/base/templates/base/navbar.html
@@ -11,24 +11,24 @@
                 <img src="{% static 'base/images/Faviocn-girban.svg' %}" height="40px" alt="logo" class="offcanvas-title" id="offcanvasNavbarLabel">
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="container-fluid offcanvas-body">
+            <div class="container-fluid offcanvas-body max-vh-100">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mx-4">
                     <li class="nav-item">
-                        <a class="nav-link active text-light" aria-current="page" href="#">
+                        <a class="nav-link active text-light fs-1" aria-current="page" href="{% url 'home' %}">
                             WORK
-                            <div class="divider mb-4"></div>
+                            <div class="divider mb-3"></div>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="{% url 'about' %}">
+                        <a class="nav-link text-light fs-1" href="{% url 'about' %}">
                             ABOUT
-                            <div class="divider mb-4"></div>
+                            <div class="divider mb-3"></div>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="{% url 'contact' %}"">
+                        <a class="nav-link text-light fs-1" href="{% url 'contact' %}"">
                             CONTACT
-                            <div class=" divider mb-4">
+                            <div class=" divider">
             </div>
             </a>
             </li>
