--- a/girban/base/templates/base/about.html
+++ b/girban/base/templates/base/about.html
@@ -4,33 +4,34 @@
 {% block body %}
 {% include 'base/navbar-white.html' %}
 <div class="container-fluid d-flex flex-column" id="about">
-    <div class="container px-5">
+    <div class="container-lg">
         <div class="row d-flex justify-content-center title-row">
-            <img src="{% static 'base/images/about.png' %}" alt="logo" class="my-img my-4">
-            <h1 class="text-center text-dark">hey there, i'm girban – a full stack developer</h1>
+            <img src="{% static 'base/images/about.png' %}" alt="logo" class="my-img my-5">
+            <h1 class="text-center text-dark">hey there, i'm girban – a ml engineer and a full stack developer</h1>
             <div class="small-line" style="border-top: 10px solid red"></div>
-            <p class="text-center text-dark mt-4 about-me fs-4">
-                As an art director, designer and front-end developer, I have been building interactive experiences, creating brands and designing print materials for over eight years. I’m a fan of structure and simplicity in both design and code; organization and consistency are very important to me. <br><br>
+            <p class="text-center text-dark my-5 about-me fs-5 lh-sm">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas ut voluptate unde totam culpa nesciunt quaerat in, earum corporis nihil consectetur dicta, facere, ipsum necessitatibus laudantium impedit amet vero! Quasi, doloremque quas voluptatibus aliquam accusantium ducimus. Porro, fugit facere, quisquam perferendis voluptates, repudiandae esse non praesentium distinctio amet
+                quam voluptate. <br><br>
 
-                A few of my strengths are creative concept and strategy development, art direction, creative direction, UI/UX design, front-end development, typography, and bridging communication between developers and designers. <br><br>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quos voluptas facilis hic, molestias sequi corrupti, commodi veritatis aliquam culpa accusantium voluptatum amet ratione nisi! Sed natus laboriosam, voluptates libero ipsa aliquam, necessitatibus deserunt, assumenda asperiores sequi totam quia veritatis quis. Commodi perferendis non tempore.<br><br>
 
-                I find inspiration in nature, architecture, vintage fashion, indie electronica, science fiction and good lattes. When I’m not working, you can find me at a local coffee house, exploring indie art fairs, kickboxing, or even enjoying an old-fashioned cocktail. <br><br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, aliquam! A quas saepe maiores natus adipisci itaque. Nulla dignissimos, nam neque at inventore magni ullam eaque, nesciunt, repellat alias commodi! Reprehenderit commodi necessitatibus at eaque saepe, tempore enim tempora dolore vel illo cumque est doloremque incidunt perspiciatis id distinctio provident? <br><br>
             </p>
         </div>
 
         <div class="row gy-5">
             <div class="col-md-6 ">
-                <h5 class="text-left text-dark">CLIENTS I'VE WORKED WITH</h5>
+                <h6 class="texcetext-center text-dark">CLIENTS I'VE WORKED WITH</h6>
                 <div class="small-line" style="border-top: 10px solid red"></div>
-                <p class="text-left text-dark mt-4 about-bottom fs-6 me-5">
+                <p class="text-left text-dark mt-4 fs-6">
                     Detroit Riverfront Conservancy, Midtown Detroit Inc, Detroit Economic Growth Corporation, Eaton Steel Bar Company, Detroit Institute of Arts, DTE Energy, Art X Detroit, Dlectricity, Braun Construction, Habitually Hopeful
                 </p>
 
             </div>
             <div class="col-md-6">
-                <h5 class="text-left text-dark">ACCOLADES & AWARDS</h5>
+                <h6 class="text-left text-dark">ACCOLADES & AWARDS</h6>
                 <div class="small-line" style="border-top: 10px solid red"></div>
-                <p class="text-left text-dark mt-4 about-bottom fs-6 me-5">
+                <p class="text-left text-dark mt-4 fs-6">
                     Awwwards Honorable Mention 2014 <br>
                     Eaton Steel Bar Company - WMA WebAward 2013 <br>
                     Art X Detroit - GD USA 2012 <br>
