--- a/girban/base/templates/base/home.html
+++ b/girban/base/templates/base/home.html
@@ -4,14 +4,17 @@
 {% block body %}
 {% include 'base/navbar.html' %}
 <div class="container-fluid d-flex flex-column title">
-    <div class="row d-flex justify-content-center title-row my-auto">
+    <div class="row d-flex justify-content-center my-auto">
         <img src="{% static 'base/images/Logo-girban.svg' %}" alt="logo" height="110px">
-        <h1 class="text-center">GIRBAN ADHIKARI</h1>
+        <h1 class="text-center text-wrap mt-4">GIRBAN ADHIKARI</h1>
         <div class="small-line"></div>
-        <h4 class="text-center mt-2">ENGINEER + DEVELOPER</h4>
+        <h4 class="text-center mt-4">ENGINEER + DEVELOPER</h4>
     </div>
     <div class="row text-center pb-3">
-        <i class="fa-solid fa-caret-down text-light fs-1 bounce2"></i>
+        <a href="" class="text-decoration-none fa-solid fa-caret-down text-light fs-1 bounce2"></a>
     </div>
+</div>
+<div class="container-fluid" id="work">
+    {% include 'base/work.html' %}
 </div>
 {% endblock body %}
