--- a/girban/base/templates/base/about.html
+++ b/girban/base/templates/base/about.html
@@ -1,6 +1,10 @@
 {% extends 'base/layout.html' %}
 {% load static %}
 
+{% block title %}
+About | Girban Adhikari
+{% endblock title %}
+
 {% block body %}
 {% include 'base/navbar-white.html' %}
 <div class="container-fluid d-flex flex-column" id="about">
