--- a/girban/base/templates/base/contact.html
+++ b/girban/base/templates/base/contact.html
@@ -1,6 +1,10 @@
 {% extends 'base/layout.html' %}
 {% load static %}
 
+{% block title %}
+Contact | Girban Adhikari
+{% endblock title %}
+
 {% block body %}
 {% include 'base/navbar-white.html' %}
 <div class="container-fluid d-flex flex-column pt-5" id="contact">
@@ -28,7 +32,7 @@
                 <h5 class="text-left text-dark">RESUME</h5>
                 <div class="col-1" style="border-bottom: 10px solid red"></div>
                 <p class="mt-3 text-wrap">
-                    <a href="https://www.linkedin.com/in/girban-adhikari-0b1b3b1b1/" target="_blank" class="text-dark fs-5">Download Resume</a>
+                    <a href="{% static 'base/resume.pdf' %}" target="_blank" class="text-dark fs-5">Download Resume</a>
                 </p>
             </div>
         </div>
